--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-requests>=2.31.0
-Flask>=3.1.2
+fastapi==0.109.2
+uvicorn[standard]==0.27.1
+httpx==0.26.0
+tenacity==8.2.3
+cachetools==5.3.2
+jinja2==3.1.3
+python-multipart==0.0.9
